[package]
name = "sote_net"
version = "0.1.0"
authors = ["Calandiel <Calandiel@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = "1.1"
rand = "0.8.4"
rand_core = "0.5.1"
sha3 = "0.9.1"
aes-gcm-siv = "0.10.1"